--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
         <img src="img/imagen1.jpg" alt="">
         <img src="img/imagen2.jpg" alt="">
         <img src="img/imagen3.jpg" alt="">
-        <img src="img/imagen6.jpg" alt="">
+        <img src="img/imagen6.JPG" alt="">
         <img src="img/imagen4.jpg" alt="">
         <img src="img/imagen5.jpg" alt="">
-        <img src="img/imagen7.jpg" alt="">
+        <img src="img/imagen7.JPG" alt="">
     </section> 
 
     <!-- SECCTION C O N T A C T O -->
