--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </div>
             <div class="servicio">
                 <span class="icono"><i class="fa-solid fa-arrow-trend-up"></i></span>
-                <h4>Business Agility - ONE</h4>
+                <h4>Business Agility - ORACLE ONE</h4>
                 <hr>
                 <ul class="servicios-tag">
-                    <li>Métodd ágil</li>
+                    <li>Método ágil</li>
                     <li>Eprendimento</li>
                 </ul>
                 <a href="https://app.aluracursos.com/degree/certificate/213b969a-dbfb-4425-bd56-db890bdf5b9b">Certificado</a>
@@ -221,23 +221,23 @@
                 <div class="overlay"></div>
                 <img src="img/proyecto4.jpg" alt="">
                 <div class="info">
-                    <h4>Descripcion Proyecto</h4>
+                    <h4>Evento de Marketing</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto4.jpg" alt="">
+                <img src="img/proyecto5.jpg" alt="">
                 <div class="info">
-                    <h4>Descripcion Proyecto</h4>
+                    <h4>Evento de Marketing</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto4.jpg" alt="">
+                <img src="img/proyecto9.jpg" alt="">
                 <div class="info">
-                    <h4>Descripcion Proyecto</h4>
+                    <h4>Evento de Marketing</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
