--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <img src="img/proyecto4.jpg" alt="">
                 <div class="info">
                     <h4>Evento de Marketing</h4>
-                    <p>Diseño Web</p>
+                    <p>The Black Club</p>
                 </div>
             </div>
             <div class="proyecto">
@@ -230,7 +230,7 @@
                 <img src="img/proyecto5.jpg" alt="">
                 <div class="info">
                     <h4>Evento de Marketing</h4>
-                    <p>Diseño Web</p>
+                    <p>Marketing High Definition V.2</p>
                 </div>
             </div>
             <div class="proyecto">
@@ -238,7 +238,7 @@
                 <img src="img/proyecto9.jpg" alt="">
                 <div class="info">
                     <h4>Evento de Marketing</h4>
-                    <p>Diseño Web</p>
+                    <p>Haga más con Menos</p>
                 </div>
             </div>
         </div>
