--- a/cv.html
+++ b/cv.html
@@ -41,6 +41,7 @@
         <div class="imgcv">
             <img class="cv1" src="img/1.jpg">
             <img class="cv2" src="img/2.jpg">
+            <img class="cv3" src="img/3.jpg">
         </div>
         
     </section>
