--- a/cv.html
+++ b/cv.html
@@ -39,9 +39,9 @@
     </section>
     <section>
         <div class="imgcv">
-            <img class="cv1" src="img/1.jpg">
-            <img class="cv2" src="img/2.jpg">
-            <img class="cv3" src="img/3.jpg">
+            <img class="cv1" src="img/1.png">
+            <img class="cv2" src="img/2.png">
+            <img class="cv3" src="img/3.png">
         </div>
         
     </section>
